--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,6 +14,9 @@ body{
 main{
     color: white;
     width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 h1{
     font-family: Knewave, verdana, arial;
@@ -126,9 +129,10 @@ p{
     #answers{
         width: 90%;
         padding: 1em;
+        backdrop-filter: blur(3px);
     }
     .answerButtons{
-        width: 200px;
+        width: 70%;
         font-size: 20px;           /* smaller width */
     }
     #question{
