--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,7 +13,7 @@ body{
 }
 main{
     color: white;
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
